# Movaic

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  util.cpp  util.h
movaic/source/: CMakeLists.txt
src/: commandLineParser.cpp  commandLineParser.h  main.cpp  util.cpp  util.h
